--- a/kogito-springboot-examples/ruleunit-springboot-example/pom.xml
+++ b/kogito-springboot-examples/ruleunit-springboot-example/pom.xml
@@ -4,10 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.kie.kogito.examples</groupId>
+  <parent>
+    <groupId>org.kie.kogito.examples</groupId>
+    <artifactId>kogito-springboot-examples</artifactId>
+    <version>1.33.0.Final</version>
+  </parent>
   <artifactId>ruleunit-springboot-example</artifactId>
   <name>Kogito Example :: RuleUnit - Spring Boot</name>
-  <version>1.33.1-SNAPSHOT</version>
 
   <properties>
     <version.org.kie.kogito>1.33.0.Final</version.org.kie.kogito>
@@ -57,6 +60,9 @@
         <artifactId>kogito-maven-plugin</artifactId>
         <version>${version.org.kie.kogito}</version>
         <extensions>true</extensions>
+        <configuration>
+          <onDemand>true</onDemand>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -68,21 +74,6 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
-        <configuration>
-          <parameters>true</parameters>
-          <source>11</source>
-          <target>11</target>
-          <showDeprecation>true</showDeprecation>
-          <showWarnings>true</showWarnings>
-          <compilerArgs>
-            <arg>-Xlint:all</arg>
-            <arg>-Xlint:-processing</arg>
-          </compilerArgs>
-        </configuration>
       </plugin>
     </plugins>
   </build>
